src/system/libroot/libroot_init.c
@@ -52,6 +52,9 @@ initialize_before(image_id imageID)
 	__gRuntimeLoader->call_atexit_hooks_for_range
 		= _call_atexit_hooks_for_range;
 
+	if (__gRuntimeLoader->program_args->umask != (mode_t)-1)
+		umask(__gRuntimeLoader->program_args->umask);
+
 	__init_time();
 	__init_heap();
 	__init_env(__gRuntimeLoader->program_args);
